--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -48,3 +48,6 @@ fiw_related_links:
 fiw_privacy: "#"
 fiw_eula: "#"
 fiw_realm_json: https://opendata.publicwifi.it/freeitaliawifi/realms.json
+fiw_default_realm:
+    label: WiFi esempio
+    value: wifiesempio.it
