--- a/tasks/static.yml
+++ b/tasks/static.yml
@@ -17,7 +17,7 @@
 - name: Build main.js
   template:
     src: ../templates/main.js
-    dest: "{{ fiw_path }}/js/main.js"
+    dest: "{{ fiw_path }}/js/main-tmp.js"
 
 - name: Build html page
   template:
