--- a/tasks/minification.yml
+++ b/tasks/minification.yml
@@ -26,7 +26,7 @@
   shell: "slimit {{ fiw_path }}/js/moment.min.js >> {{ fiw_path }}/build/bundle-tmp.js"
 
 - name: Add main.js to bundle.js
-  shell: "slimit {{ fiw_path }}/js/main.js >> {{ fiw_path }}/build/bundle-tmp.js"
+  shell: "slimit {{ fiw_path }}/js/main-tmp.js >> {{ fiw_path }}/build/bundle-tmp.js"
 
 - name: Publish bundle.js
   command: "mv {{ fiw_path }}/build/bundle-tmp.js {{ fiw_path }}/build/bundle.js"
